L05-T2 Use immutable test data to detect input arguments modification